fixing spacing on pricing page

--- a/css/styles.css
+++ b/css/styles.css
@@ -131,7 +131,7 @@ input.btn { border: none; cursor: pointer; }
 	color:#fff;
 	background:#ffa700 url(../images/bg-top-area.jpg) repeat-x 50% 0;
 	min-height:428px;
-	margin:0 0 50px;
+	margin:0 0 25px;
 	position:relative;
 	z-index:100;
 }
